       an unidentified item.
   // - Now drop for boss mobs, and will always drop 7 unidentified items by default.
   - TODO: doesn't drop more than once! Need to use something other than LootItemRandomChanceCondition.
  Mouse scrollwheel can now scroll the lists next to scrollbars.
  Magic Infuser recipes now show up in JEI.
  Added an advancement for the Crystal Energy Extractor.
CHANGED:
  Increased the chance to drop an Unidentified Ring when killing enemy mobs.
   - But decreased the chance of dropping unidentified things overall? I have no idea actually.
     I don't have the time to fully test this.
  The Dimensional Anchor is now registered as a Curios Charm, if you have the Curios mod installed.
  Changed Energy Storage Container's default maximum capacity from 1,000,000 to 200,000.
    - This is mainly because I plan to add different types of batteries in the future.
  Some Machine State status messages are now color-coded.
  Removed any top-level sections in Config files.
   - This will cause most of your config files to be reset. Sorry!
  Raised the generation of Titanium Ore back up to where it was in versions 1.3.x.
  Increased Silicon Ore generation. (mainly because a lot of crafting recipes have changed as well.)
  Also adjusted machine values.
  Reduced the volume of the Compressor since it WAS too loud. Also randomized the pitch slightly.
  Increased the number of Energy Wires you get from crafting them from 8 to 12.
FIXED:
  Fixed Unidentified Chainmail armor dropping as often as Gold armor.
  Optimized Lasers:
    - Doesn't use any TileEntities at all, so there should be much less lag.
    - Lasers stay in-world if you log out and get back in again.
    - Lasers beams continue moving even if the Laser is removed.
  Fixed Laser machines counting adjacent lasers even though they weren't attached
    or the proper laser type.
  Fixed de_de.json language files. Fixed "Lasers" and "Auto Shutoff" not being translated.