@@ -1,0 +1,7 @@
+package addsynth.core.game.item.constants;
+
+public final class ItemConstants {
+
+  public static final int stack_size = 64;
+
+}
