@@ -5,11 +5,11 @@ import net.minecraft.ChatFormatting;
 
 public enum ItemValue {
 
-  COMMON   (0, Rarity.COMMON,   Rarity.COMMON.color),
-  GOOD     (1, Rarity.UNCOMMON, Rarity.UNCOMMON.color),
-  RARE     (2, Rarity.RARE,     Rarity.RARE.color),
-  EPIC     (3, Rarity.EPIC,     Rarity.EPIC.color),
-  LEGENDARY(4, Rarity.EPIC,     ChatFormatting.GOLD);
+  COMMON   (0, Rarity.COMMON,   Rarity.COMMON.color),   // White
+  GOOD     (1, Rarity.UNCOMMON, Rarity.UNCOMMON.color), // Yellow
+  RARE     (2, Rarity.RARE,     Rarity.RARE.color),     // Cyan
+  EPIC     (3, Rarity.EPIC,     Rarity.EPIC.color),     // Purple
+  LEGENDARY(4, Rarity.EPIC,     ChatFormatting.GOLD);   // Orange
 
   public final int value;
   public final Rarity rarity;
